Fix/insights fe fixes (#393)
* Reduce z-index so that it doesn't interfere with the cookie consent banner

* Hide jumplinks scrollbar

* Edit comments

* Add fixed height and overflow:scroll to transcript; fix details element display on Safari; hide scrollbar

* Add transcript text to tab order as this is otherwise inaccessible to IE11 users

* Change scrollbar implementation overflow-y as opposed to hiding the scrollbar altogether

* Replace height:100vh with height:100% on IE11 as sticky  positioning isn't supported

--- a/sass/includes/_jumplinks.scss
+++ b/sass/includes/_jumplinks.scss
@@ -3,7 +3,8 @@
   top: 0;
   padding: 2.5rem 0 0 1rem;
   height: 100vh;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   &__heading {
     font-size: 2rem;
@@ -41,5 +42,10 @@
   
   @media (max-width: $screen__md) {
     display: none;
+  }
+
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    overflow-y: hidden;
+    height: 100%;
   }
 }
